[project]
name = "comfyui_senddiscord"
description = "Nodes:Send Video to Discord"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/xliry/ComfyUI_SendDiscord"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_SendDiscord"
Icon = ""
